--- a/AstronomyHub.css
+++ b/AstronomyHub.css
@@ -23,14 +23,14 @@ margin:0;
 
 h1{
   font-family: 'Comfortaa', cursive;
-  font-size: 30px;
+  font-size: 45px;
   text-align: center;
   margin: .5em;
 }
 
 h2{
   font-family: 'Roboto',sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
   margin: .5em;
 }
@@ -38,6 +38,11 @@ h2{
 p{
   font-family: 'Montserrat', sans-serif;
   margin: 1em;
+  font-size: 35px;
+}
+
+ol{
+  font-size: 25px;
 }
 
 body{
@@ -175,6 +180,54 @@ padding: 2px 16px;
   width: 80%;
   margin: 10%;
 }
+
+.text-center{
+  font-size: 25px;
+  text-align: center;
+  font-family: monospace, sans-serif;
+}
+
+.list{
+  float: left;
+  padding-left: 150px;
+  padding-bottom: 50px;
+}
+
+.list1{
+  float: right;
+  padding-right: 350px;
+  padding-bottom: 50px;
+}
+
+.link{
+  padding-top: 250px;
+  padding-bottom: 50px;
+  padding-right: 200px;
+}
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.tranz {
+  background-color: white;
+  color: black;
+  border: 2px solid #008CBA;
+}
+
+.tranz:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
 
 #sideLogo{display:none;}
 
