--- a/AstronomyHub.css
+++ b/AstronomyHub.css
@@ -52,7 +52,6 @@ body{
 
 aside{
   color:#FFFFFF;
-
   background-color: #232323;
   display: grid;
   grid-template-columns: auto 40px;
@@ -78,11 +77,6 @@ figcaption{
   font-weight: bold;
 
 }
-
-nav{
-  background-color: #424242;
-}
-
 
 ul{
   display: none;
@@ -284,4 +278,35 @@ padding: 2px 16px;
     margin: 25%;
   }
 
+}
+
+.dropdown-btn {
+ border: none;
+ background: none;
+ text-align: left;
+ cursor: pointer;
+ outline: none;
+ color:#FFFFFF;
+ width: 100%;
+ text-decoration: none;
+ text-transform: uppercase;
+ font-size: 18px;
+ padding: 1.5em 3em;
+ font-family: 'Montserrat', sans-serif;
+}
+
+.dropdown-btn:hover, .dropdown-container a:hover, aside a:hover {
+ color: #40E0D0;
+}
+
+
+.active-dropdown {
+ background-color: #778899;
+ color: white;
+}
+
+.dropdown-container {
+ display: none;
+ background-color: #696969;
+ padding-left: 8px;
 }
