--- a/AstronomyHub.css
+++ b/AstronomyHub.css
@@ -30,14 +30,14 @@ body, head{
       /* TEXT STYLES */
 h1{
   font-family: 'Comfortaa', cursive;
-  font-size: 50px;
+  font-size: 2em;
   text-align: center;
   margin: .5em;
 }
 
 h2{
   font-family: 'Roboto',sans-serif;
-  font-size: 40px;
+  font-size: 1.5em;
   text-align: center;
   margin: .5em;
 }
@@ -45,19 +45,34 @@ h2{
 p{
   font-family: 'Montserrat', sans-serif;
   margin: 1em;
-  font-size: 35px;
+  font-size: 1em;
 }
 
       /* SIDE MENU */
 
 aside{
+  z-index: 1;
+  left:-60%;
   margin: 0 2em 0 0;
-  width: 20%;
+  width: 60%;
   position:fixed;
   padding: 0;
   height:100%;
   background-color: #424242;
   color:#dddddd;
+
+  -webkit-transition:left 250ms ease-out;
+  -moz-transition:left 250ms ease-out;
+  -o-transition:left 250ms ease-out;
+  transition:left 250ms ease-out;
+}
+
+aside:hover{
+  left:0px;
+}
+
+nav {
+  z-index: 2;
 }
 
 nav ul {
@@ -83,10 +98,27 @@ nav ul li>a:hover{
 
 nav ul li ul{
   margin-left: 2em;
+
 }
 
 nav ul li ul a:hover{
-  background-color: #009eff;
+  background-color: #f00;
+}
+
+nav li ul li {
+  overflow:hidden;
+  height: 0;
+  -webkit-transition:height 250ms ease-out;
+  -moz-transition:height 250ms ease-out;
+  -o-transition:height 250ms ease-out;
+  transition:height 250ms ease-out;
+}
+
+
+
+
+nav ul > li:hover ul li {
+  height: 3em;
 }
 
 figure{
@@ -109,9 +141,26 @@ main{
   top:0;
   overflow: hidden;
   height: 100%;
-  margin: 0 0 0 20%;
+  margin: 0 0 0 0;
   background-color: #555555;
   color:#fff;
+}
+
+.extendBtn{
+  z-index: 0;
+  top:75%;
+  position: fixed;
+  margin-left: calc(60%);
+  width: 2em;
+  height: 4em;
+  border-radius: 0 2em 2em 0 ;
+  background-color: #424242;
+}
+
+.arrow{
+  margin: 60% 25% ;
+  width: 10px;
+  height: 2  0px;
 }
 
 #sideLogo{
@@ -130,26 +179,28 @@ main{
   width:30%;
 }
 
+      /* TABLET / Landscape-MOBILE */
+@media only screen and (min-width: 540px) {
+  aside{
+    width:40%;
+    left: -40%;
+  }
+
+  .extendBtn{
+    margin-left: 40%;
+  }
+
+}
+
       /* DESKTOP ONLY */
 @media only screen and (min-width: 768px) {
-
-  .cardgallery{ /*this class is to be replaced with a figure*/
-
+  aside {
+    width: 20%;
+    left: 0;
   }
 
-  #button_menu{display: none;}
-  #sideLogo{display: block;}
-
-  .illustration-S{
-
-  }
-
-  .illustration-M{
-
-  }
-
-  .illustration-L{
-
+  .extendBtn{
+    display: none;
   }
 
 }
