card corners & padding

--- a/AstronomyHub.css
+++ b/AstronomyHub.css
@@ -11,7 +11,7 @@ html{
 body{
   margin:0;
   padding:0;
-  background-color: #f00;
+  background-color: #f0f;
 }
 
       /* FONTS */
@@ -144,7 +144,7 @@ main{
   overflow: hidden;
   height: 100%;
   margin: 0 0 0 0;
-  background-color: #555555;
+  background-color: #232323;
   color:#fff;
 }
 
@@ -169,6 +169,11 @@ main{
   top:48px;
 }
 
+.cardgallery{
+  display: grid;
+  
+}
+
 .cta{
   background-color: #009eff;
   border-radius: 2em;
@@ -183,8 +188,16 @@ main{
 
 .card{
   box-shadow: 0 4px 8px 0 ;
+  margin: .5em;
   transition: 0.3s;
   width: 40%;
+  border-radius: 1em;
+  padding: 1em;
+}
+
+.card img{
+
+  border-radius: .75em;
 }
 
 .card:hover {
